--- a/templates/logado.html
+++ b/templates/logado.html
@@ -75,7 +75,7 @@
         </button>
         <div class="d-flex">
           <div class="collapse navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav me-auto my-2 my-lg-1 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+            <ul class="navbar-nav me-auto my-2 my-lg-1 navbar-nav-scroll">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{{ url_for('homepage') }}">Home</a>
               </li>
