--- a/templates/home_sem_login.html
+++ b/templates/home_sem_login.html
@@ -155,7 +155,7 @@
 </head>
 
 
-<body style="background-color:#f2f2f2; height: max-content; min-width:max-content; width: auto;">
+<body style="background-color:#f2f2f2; height: max-content;">
     <nav class="navbar navbar-expand-md navbar-dark"; style="background-color: #c42020;min-width: max-content;width: 100%;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
